added h2 and inmemory repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-logging.level.org.springframework=DEBUG
+spring.profiles.active=prod
+
+welcome.message=Welcome to ${app.name}!
+
+basicvariables.value=false
+basicvariables.message=NEW_MESSAGE
+basicvariables.amount=12
+
+spring.datasource.url=jdbc:h2:mem:testdb
